; ModuleID = '/home/carl/AnghaBench/vlc/src/text/extr_charset.c_us_vasprintf.c'
source_filename = "/home/carl/AnghaBench/vlc/src/text/extr_charset.c_us_vasprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LC_NUMERIC_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"C\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @us_vasprintf(i8** %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @LC_NUMERIC_MASK, align 4
  %11 = call i64 @newlocale(i32 %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* null)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %7, align 8
  %13 = call i64 @uselocale(i64 %12)
  store i64 %13, i64* %8, align 8
  %14 = load i8**, i8*** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @vasprintf(i8** %14, i8* %15, i32 %16)
  store i32 %17, i32* %9, align 4
  %18 = load i64, i64* %7, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %3
  %21 = load i64, i64* %8, align 8
  %22 = call i64 @uselocale(i64 %21)
  %23 = load i64, i64* %7, align 8
  %24 = call i32 @freelocale(i64 %23)
  br label %25

25:                                               ; preds = %20, %3
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local i64 @newlocale(i32, i8*, i32*) #1

declare dso_local i64 @uselocale(i64) #1

declare dso_local i32 @vasprintf(i8**, i8*, i32) #1

declare dso_local i32 @freelocale(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
